Fixed the home page such that the list of programs renders in-screen instead of using links. We may want to consider modals for mobile only, they would look profanely stupid on fullscreen, and the current form looks a little poopy on mobile but scrolls into view nicely.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -314,17 +314,4 @@ ion-list.toggle-section .toggle-section-content {
 		object-fit:contain !important;
 		max-height: 30vh !important;	
 	}
-	
-	
 }
-/*
-div.slide{
-	
-}
-
-ion-slide img{
-
-
-
-}
-*/
